--- a/index.html
+++ b/index.html
@@ -22,10 +22,6 @@
 <div class="nav-bar">
   <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="#"><img src="dev logo (1).png"></a>
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <i class="fa fa-bars"></i>
-    </button>
   
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
@@ -161,20 +157,35 @@
     <h3 class="text-center">My Education</h3>
     <ul class="timeline">
     <li>
-    <h4><span> 2015 - </span>Bachelor of Science </h4>
-    <p> <b>Course of Study :</b> Computer Science <br> 
-        <b>Institution :</b> University of Benin <br>
+    <h4><span> 2015 - </span>Bachelor of Science. Computer Science</h4>
+    <p> <b>Institution :</b> University of Benin <br>
         <b>Duration :</b> 2009/2010 - 2014/2015 <br>
         <b>Location: </b> Edo State, Nigeria<br>
     </p>
     </li>
    
     <li>
-    <h4><span> 2008 - </span>Senior Secondary School Certificate (SSCE)</h4>
-    <p> <b>Institution :</b> Holy Rosary Secondary School <br>
-        <b>Duration :</b> 2002 - 2008 <br>
-        <b>Location: </b> Port Harcourt Nigeria<br>
-    </p>
+      <h4><span> 2017 - </span>Quality Management System (ISO 9001:2015)</h4>
+      <p> <b>Institution :</b> Edullence <br>
+          <b>Duration :</b> May 2017 <br>
+          <b>Location: </b> Port Harcourt Nigeria<br>
+      </p>
+    </li>
+
+    <li>
+      <h4><span> 2017 - </span>Health Safety and Environment level 1,2&3</h4>
+      <p> <b>Institution :</b> British International Safety Organisation <br>
+          <b>Duration :</b> January 2016 <br>
+          <b>Location: </b> Port Harcourt Nigeria<br>
+      </p>
+    </li>
+
+    <li>
+      <h4><span> 2017 - </span>Project Management Preparatory Course </h4>
+      <p> <b>Institution :</b> Dexnova Consults <br>
+          <b>Duration :</b> March 2014 <br>
+          <b>Location: </b> Port Harcourt Nigeria<br>
+      </p>
     </li>
   </div>
   </div>
@@ -190,14 +201,14 @@
 
   <div class="row">
   <div class="col-md-4">
-  <div class="services-box">
+  <div class="services-box-html skill">
   <i class="fa fa-html5"></i><span>HTML Development</span>
   <p> HTML is widely used in website development. Using HTML, I create text with links and hyperlinks that can turn letters into images, tables, and other representations.</p>
   </div>
   </div>
 
   <div class="col-md-4">
-    <div class="services-box">
+    <div class="services-box-css skill">
     <i class="fa fa-css3"></i><span>CSS Development</span>
     <p> Using CSS style sheets and effects, I create a unique and attractive look of your website and web Applications.</p>
     </div>
@@ -205,14 +216,14 @@
 
 
   <div class="col-md-4">
-    <div class="services-box">
-    <i class="fa fa5-js-square"></i> <span>JavaScript Development</span>
+    <div class="services-box-javascript skill">
+      <i class="fa fa-rocket"></i><span>JavaScript Development</span>
     <p> JavaScript development is used to transform an HTML page into the dynamic and interactive ecosystem.</p>
     </div>
     </div>
 
   <div class="col-md-4">
-    <div class="services-box">
+    <div class="services-box-reactjs skill">
     <i class="fa fa-rocket"></i><span>React.Js</span>
     <p> I use React.Js to create lightweight, scalable, easy customizable and rich UI designs for websites and Applications
     </p>
@@ -220,16 +231,16 @@
     </div>
 
   <div class="col-md-4">
-    <div class="services-box">
+    <div class="services-box-uidesign skill">
     <i class="fa fa-rocket"></i><span>UI Design</span>
     <p> The design is what brings web designs and Applications to life, so I creatively design in harmony with user experience in mind </p>
     </div>
     </div>
 
   <div class="col-md-4">
-    <div class="services-box">
-    <span>Responsive and Mobile Design</span>
-    <p> Due to the fact that more and more users access the Internet from mobile devices, I specializing in creating mobile-specific designs. I also take into account the fact that a website can be visited from a desktop, so all  websites’ layouts can adapt to any screen size</p>
+    <div class="services-box-responsive-design skill">
+    <i class="fa fa-rocket"></i><span>Responsive and Mobile Design</span>
+    <p> I specializing in creating responsive designs. Websites can be visited from a range of devices, so responsive layouts are created for different screen sizes.</p>
     </div>
     </div>
   </div>
